# rustlyn

./: .gitignore  AGENTS.md  README.md  REBUILDING_RUST_TO_DOTNET_TODAY.md
.github/workflows/: ci.yml
artifacts/scratch/: and_fold_i32_probe.bc  and_fold_i64_probe.bc  and_fold_i64_probe.rs  max_xor_i32_probe.bc  max_xor_i64_probe.bc  max_xor_u32_probe.bc  max_xor_u32_probe.rs  max_xor_u64_probe.bc  min_xor_i16_direct.bc  min_xor_i16_probe.bc  min_xor_i32_probe.bc  min_xor_i64_probe.bc  min_xor_u32_probe.bc  min_xor_u64_probe.bc  or_fold_i32_probe.bc  or_fold_i32_probe.rs  or_fold_i64_probe.bc  or_fold_i64_probe.rs  product_fold_i64_probe.bc  product_fold_i64_probe.rs
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_ComponentModel_Annotations/: Cargo.toml
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_ComponentModel_Annotations/src/: lib.rs
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_ComponentModel_TypeConverter/: Cargo.toml
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_ComponentModel_TypeConverter/src/: lib.rs
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Data_Common/: Cargo.toml
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Diagnostics_Process/: Cargo.toml
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Diagnostics_Process/src/: lib.rs
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_IO_Compression_ZipFile/: Cargo.toml
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_IO_Compression_ZipFile/src/: lib.rs
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Linq_Queryable/: Cargo.toml
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Linq_Queryable/src/: lib.rs
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Net_Http/: Cargo.toml
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Net_Http/src/: lib.rs
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Net_HttpListener/: Cargo.toml
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Net_HttpListener/src/: lib.rs
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Net_Mail/: Cargo.toml
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Net_Mail/src/: lib.rs
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Net_Primitives/: Cargo.toml
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Net_Primitives/src/: lib.rs
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Reflection_Emit_ILGeneration/: Cargo.toml
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Reflection_Emit_ILGeneration/src/: lib.rs
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Runtime/: Cargo.toml
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Security_Claims/: Cargo.toml
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Security_Claims/src/: lib.rs
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Security_Cryptography_Algorithms/: Cargo.toml
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Security_Cryptography_Algorithms/src/: lib.rs
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Security_Cryptography_Csp/: Cargo.toml
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Security_Cryptography_Csp/src/: lib.rs
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Security_Cryptography_X509Certificates/: Cargo.toml
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Security_Cryptography_X509Certificates/src/: lib.rs
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Text_Json/: Cargo.toml
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Text_Json/src/: lib.rs
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Xml_XPath_XDocument/: Cargo.toml
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Xml_XPath_XDocument/src/: lib.rs
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Xml_XmlSerializer/: Cargo.toml
artifacts/sdk-0.1.5/extracted/tools/crates/rs_dotnet/System_Xml_XmlSerializer/src/: lib.rs
docs/: binding-generation-policy.md  bindings-surface.md  interop-handle-abi.md  llvm-helper.md  nativeaot-aot-analyzer-baseline.md  nativeaot-rust-host.md  original-eric-sink-design.md  reconstruction-notes.md  revived-design.md  roadmap-deep.md  roadmap.md  sourcegear-fake-link-decision.md  sourcegear-parity-roadmap.md  support-matrix.md
dotnet/backend/: Directory.Build.props
native/rustlyn/: Cargo.toml  build.rs
native/rustlyn-llvm/: Cargo.toml  build.rs
native/rustlyn-nativeaot-smoke/: Cargo.toml
native/rustlyn-nativeaot-static-smoke/: Cargo.toml  build.rs
samples/add/: Cargo.toml
samples/alloc_only_probe/: Cargo.toml
samples/alloc_probe/: Cargo.toml
samples/and/: Cargo.toml
samples/and_fold_i16_vectorized/: Cargo.toml
samples/and_fold_i64_vectorized/: Cargo.toml
samples/and_fold_i8_vectorized/: Cargo.toml
samples/cbor/: Cargo.toml
samples/cbor/src/: lib.rs
samples/marked_yaml/: Cargo.toml
samples/marked_yaml/src/: lib.rs
samples/powershell_cmdlets/: Cargo.toml
samples/powershell_cmdlets/src/: lib.rs
samples/quick_xml/: Cargo.toml
samples/quick_xml/memchr_fallback/: Cargo.toml
samples/quick_xml/memchr_fallback/src/: lib.rs
samples/quick_xml/src/: lib.rs
scripts/: Benchmark-RustFormatPowerShellModules.ps1  Build-BsonPowerShellModule.ps1  Build-CborPowerShellModule.ps1  Build-CsvPowerShellModule.ps1  Build-MarkedYamlPowerShellModule.ps1  Build-QuickXmlPowerShellModule.ps1  Build-RustFormatPowerShellModule.ps1  Build-RustlynLlvmHelper.ps1  Build-RustlynNativeDistribution.ps1  Build-SampleBitcode.ps1  Build-SimdJsonPowerShellModule.ps1  Build-TomlPowerShellModule.ps1  Get-LlvmPrebuilt.ps1  Rustlyn.Cli.ps1  Test-AotSmoke.ps1  Test-DocClaims.ps1  Test-LlvmHelper.ps1  Test-MsBuildSdk.ps1  Test-MsBuildSdkBinary.ps1  Test-MsBuildSdkBuildStd.ps1  Test-MsBuildSdkPackage.ps1  Test-NativeHostParity.ps1  Test-RustFormatPowerShellModules.ps1  Test-RustlynLlvmOpt.ps1  Test-Smoke.ps1
templates/: Rustlyn.Templates.csproj
(+1025 files in other folders)
