[package]
name = "cbor_sample"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
ciborium = "0.2"
serde_json = { version = "1.0", features = ["preserve_order"] }

[patch.crates-io]
memchr = { path = "../quick_xml/memchr_fallback" }

[profile.release]
opt-level = 1
lto = "fat"
codegen-units = 1
panic = "abort"
