[package]
name = "marked_yaml_sample"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
marked-yaml = { version = "0.8.0", features = ["serde-path"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[profile.release]
opt-level = 1
lto = "fat"
codegen-units = 1
panic = "abort"
