[package]
name = "quick_xml_sample"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
quick-xml = { version = "0.40.1", features = ["serialize", "escape-html", "encoding"] }
serde = { version = "1.0", features = ["derive"] }

[patch.crates-io]
memchr = { path = "memchr_fallback" }

[profile.release]
opt-level = 1
lto = "fat"
codegen-units = 1
panic = "abort"
