[package]
name = "System_Data_Common"
version = "0.1.5"
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies.sgrust_core]
path = "../../sgrust_core"

[dependencies.core]
path = '../../libcore'
optional = true

[dependencies.compiler_builtins]
version = '0.1.10'
features = ['rustc-dep-of-std']
optional = true

[dependencies.System_ComponentModel]
path = "../System_ComponentModel"

[dependencies.System_ComponentModel_Primitives]
path = "../System_ComponentModel_Primitives"

[dependencies.System_ComponentModel_TypeConverter]
path = "../System_ComponentModel_TypeConverter"

[dependencies.System_ObjectModel]
path = "../System_ObjectModel"

[dependencies.System_Runtime]
path = "../System_Runtime"

[dependencies.System_Transactions_Local]
path = "../System_Transactions_Local"

[dependencies.System_Xml_ReaderWriter]
path = "../System_Xml_ReaderWriter"

[features]
building-sysroot = ['core', 'compiler_builtins', 'sgrust_core/building-sysroot' ,'System_Runtime/building-sysroot','System_Xml_ReaderWriter/building-sysroot','System_ComponentModel_TypeConverter/building-sysroot','System_ComponentModel_Primitives/building-sysroot','System_ComponentModel/building-sysroot','System_ObjectModel/building-sysroot','System_Transactions_Local/building-sysroot']

