[package]
name = "System_Diagnostics_Process"
version = "0.1.5"
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies.sgrust_core]
path = "../../sgrust_core"

[dependencies.core]
path = '../../libcore'
optional = true

[dependencies.compiler_builtins]
version = '0.1.10'
features = ['rustc-dep-of-std']
optional = true

[dependencies.System_Collections_NonGeneric]
path = "../System_Collections_NonGeneric"

[dependencies.System_Collections_Specialized]
path = "../System_Collections_Specialized"

[dependencies.System_ComponentModel_Primitives]
path = "../System_ComponentModel_Primitives"

[dependencies.System_Diagnostics_FileVersionInfo]
path = "../System_Diagnostics_FileVersionInfo"

[dependencies.System_Runtime]
path = "../System_Runtime"

[dependencies.System_Runtime_InteropServices]
path = "../System_Runtime_InteropServices"

[features]
building-sysroot = ['core', 'compiler_builtins', 'sgrust_core/building-sysroot' ,'System_Runtime/building-sysroot','System_ComponentModel_Primitives/building-sysroot','System_Runtime_InteropServices/building-sysroot','System_Diagnostics_FileVersionInfo/building-sysroot','System_Collections_NonGeneric/building-sysroot','System_Collections_Specialized/building-sysroot']

