[package]
name = "System_IO_Compression_ZipFile"
version = "0.1.5"
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies.sgrust_core]
path = "../../sgrust_core"

[dependencies.core]
path = '../../libcore'
optional = true

[dependencies.compiler_builtins]
version = '0.1.10'
features = ['rustc-dep-of-std']
optional = true

[dependencies.System_IO_Compression]
path = "../System_IO_Compression"

[dependencies.System_Runtime]
path = "../System_Runtime"

[features]
building-sysroot = ['core', 'compiler_builtins', 'sgrust_core/building-sysroot' ,'System_Runtime/building-sysroot','System_IO_Compression/building-sysroot']

