[package]
name = "System_Linq_Queryable"
version = "0.1.5"
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies.sgrust_core]
path = "../../sgrust_core"

[dependencies.core]
path = '../../libcore'
optional = true

[dependencies.compiler_builtins]
version = '0.1.10'
features = ['rustc-dep-of-std']
optional = true

[dependencies.System_Linq]
path = "../System_Linq"

[dependencies.System_Linq_Expressions]
path = "../System_Linq_Expressions"

[dependencies.System_Runtime]
path = "../System_Runtime"

[features]
building-sysroot = ['core', 'compiler_builtins', 'sgrust_core/building-sysroot' ,'System_Runtime/building-sysroot','System_Linq_Expressions/building-sysroot','System_Linq/building-sysroot']

