[package]
name = "System_Net_HttpListener"
version = "0.1.5"
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies.sgrust_core]
path = "../../sgrust_core"

[dependencies.core]
path = '../../libcore'
optional = true

[dependencies.compiler_builtins]
version = '0.1.10'
features = ['rustc-dep-of-std']
optional = true

[dependencies.Microsoft_Win32_Primitives]
path = "../Microsoft_Win32_Primitives"

[dependencies.System_Collections_Specialized]
path = "../System_Collections_Specialized"

[dependencies.System_Net_Primitives]
path = "../System_Net_Primitives"

[dependencies.System_Net_Security]
path = "../System_Net_Security"

[dependencies.System_Net_WebHeaderCollection]
path = "../System_Net_WebHeaderCollection"

[dependencies.System_Net_WebSockets]
path = "../System_Net_WebSockets"

[dependencies.System_Runtime]
path = "../System_Runtime"

[dependencies.System_Security_Claims]
path = "../System_Security_Claims"

[dependencies.System_Security_Cryptography_X509Certificates]
path = "../System_Security_Cryptography_X509Certificates"

[features]
building-sysroot = ['core', 'compiler_builtins', 'sgrust_core/building-sysroot' ,'System_Runtime/building-sysroot','System_Net_Primitives/building-sysroot','System_Net_Security/building-sysroot','System_Security_Claims/building-sysroot','Microsoft_Win32_Primitives/building-sysroot','System_Collections_Specialized/building-sysroot','System_Security_Cryptography_X509Certificates/building-sysroot','System_Net_WebHeaderCollection/building-sysroot','System_Net_WebSockets/building-sysroot']

