[package]
name = "System_Net_Primitives"
version = "0.1.5"
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies.sgrust_core]
path = "../../sgrust_core"

[dependencies.core]
path = '../../libcore'
optional = true

[dependencies.compiler_builtins]
version = '0.1.10'
features = ['rustc-dep-of-std']
optional = true

[dependencies.Microsoft_Win32_Primitives]
path = "../Microsoft_Win32_Primitives"

[dependencies.System_Runtime]
path = "../System_Runtime"

[dependencies.System_Runtime_InteropServices]
path = "../System_Runtime_InteropServices"

[features]
building-sysroot = ['core', 'compiler_builtins', 'sgrust_core/building-sysroot' ,'System_Runtime/building-sysroot','System_Runtime_InteropServices/building-sysroot','Microsoft_Win32_Primitives/building-sysroot']

