[package]
name = "System_Reflection_Emit_ILGeneration"
version = "0.1.5"
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies.sgrust_core]
path = "../../sgrust_core"

[dependencies.core]
path = '../../libcore'
optional = true

[dependencies.compiler_builtins]
version = '0.1.10'
features = ['rustc-dep-of-std']
optional = true

[dependencies.System_Reflection_Primitives]
path = "../System_Reflection_Primitives"

[dependencies.System_Runtime]
path = "../System_Runtime"

[dependencies.System_Runtime_InteropServices]
path = "../System_Runtime_InteropServices"

[features]
building-sysroot = ['core', 'compiler_builtins', 'sgrust_core/building-sysroot' ,'System_Runtime/building-sysroot','System_Reflection_Primitives/building-sysroot','System_Runtime_InteropServices/building-sysroot']

