[package]
name = "System_Security_Cryptography_Algorithms"
version = "0.1.5"
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies.sgrust_core]
path = "../../sgrust_core"

[dependencies.core]
path = '../../libcore'
optional = true

[dependencies.compiler_builtins]
version = '0.1.10'
features = ['rustc-dep-of-std']
optional = true

[dependencies.System_Runtime]
path = "../System_Runtime"

[dependencies.System_Security_Cryptography_Encoding]
path = "../System_Security_Cryptography_Encoding"

[dependencies.System_Security_Cryptography_Primitives]
path = "../System_Security_Cryptography_Primitives"

[features]
building-sysroot = ['core', 'compiler_builtins', 'sgrust_core/building-sysroot' ,'System_Runtime/building-sysroot','System_Security_Cryptography_Primitives/building-sysroot','System_Security_Cryptography_Encoding/building-sysroot']

